Remove confusing double negative in sentence in FOSS experiences question on initial application

--- a/home/templates/home/eligibility_wizard_foss_experience.html
+++ b/home/templates/home/eligibility_wizard_foss_experience.html
@@ -20,7 +20,7 @@ The following questions help us gather statistics.
 </p>
 
 <p>
-We do not reject initial applications for too little open source experience.
+We will not reject applications from people who are new to open source.
 You are welcome here.
 </p>
 
