Initial application: Clarify instructions for school information
Provide instructions for common situations we get questions asked about:
 - graduating students
 - masters and PhD students working on their thesis
 - applying to multiple universities, but not accepted yet
 - what exactly counts as the starting date of a term
 - what exactly counts as the ending date of a term
 - what to do if your academic calendar is missing for a future term

Modify the school term form to use "current", "next", and "following"
term names in each field's header. That should help when scrolling
through the overly long page.

--- a/home/templates/home/eligibility_wizard_school_info.html
+++ b/home/templates/home/eligibility_wizard_school_info.html
@@ -12,9 +12,21 @@ Are you eligible to apply to Outreachy?
 <h2>University or College Information</h2>
 
 <p>
-Please enter information about the university or college you are
-currently enrolled in (or will be enrolled in).
+Tell us about the university or college you will attend from <b>today until {{ current_round.sfc_payment_last_date|date:"F d, Y" }}</b>.
 </p>
+
+<p>
+If you are a masters or PhD student working on your thesis, fill out the information about the university or college that will be awarding your degree.
+</p>
+
+<p>
+If you will be attending multiple schools, put both school names in the University name. On the next page, indicate which university you will be at for each school term.
+</p>
+
+<p>
+If you are applying to universities and colleges, Outreachy needs to know your approximate school term dates. You can update your initial application if you find out what school you are accepted to. For now, use information from the university you are most likely to be accepted at.
+</p>
+
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <hr>
 
