Initial application: Reference new "legal name" section in applicant guide
Applicants who are transgender or non-binary may get worried if they see
questions about tax forms. Reference the legal name section in the
applicant guide to reassure them.

--- a/home/templates/home/eligibility_wizard_tax_forms.html
+++ b/home/templates/home/eligibility_wizard_tax_forms.html
@@ -17,10 +17,11 @@ Outreachy Initial Application
 <p>
 Outreachy interns will need to fill out a tax form. You will need to fill out a W-9 or a W8-BEN tax form. These questions will help us figure out which form you should use.
 </p>
+
 <p>
-Interns must put their legal names on tax forms. Please note that Outreachy organizers have experience working with people who are in the middle of name changes or who people who wish to use a pseudonym.
-The tax forms with your legal name will not be shared with mentors.
+Interns must put their legal names on tax forms. If you have concerns about using your legal name, <a href="{% url 'docs-applicant' %}#legal-name">read our FAQ.</a>
 </p>
+
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <hr>
 
