Initial application: require people with internships for school credit to fill out job time commitment questions

--- a/home/templates/home/eligibility_wizard_time_commitments.html
+++ b/home/templates/home/eligibility_wizard_time_commitments.html
@@ -59,8 +59,9 @@ Include your schedule from <b>today until {{ current_round.sfc_payment_last_date
 			    {{ field }}
 		    </div>
 		    <div class="card-footer bg-white">
-			    <p>If you have a job, say 'Yes'. If you plan on quitting your job, say yes.</p>
+			    <p>If you have a job, say 'Yes'. If you plan on quitting your job, say 'Yes'.</p>
 			    <p>If you have an unpaid internship, say 'Yes'.</p>
+			    <p>If you have an internship for school credit, say 'Yes'.</p>
 			    <p>If you have a job offer, say 'Yes'. If the job starts after the Outreachy internship ends, say 'Yes'.<p>
 			    <p>If you are applying to jobs, but you do not have a job offer, say 'No'.</p>
 			    <p>Do not count the Outreachy internship as a job.</p>
