Initial application: Simplify English in instructions

--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -16,13 +16,13 @@ You are applying for the {{ current_round.official_name }}.
 </p>
 
 <p>
-Before you fill out the initial application, please read the following:
+Before you fill out your application, please read the following:
 </p>
 
 <ul>
-	<li><a href="{% url 'docs-applicant' %}#eligibility">Eligibility criteria</a></li>
-	<li><a href="{% url 'docs-applicant' %}#initial-application">Instructions for the initial application</a></li>
-	<li><a href="{% url 'docs-applicant' %}#essay-questions">List of essay questions in the initial application</a></li>
+	<li><a href="{% url 'docs-applicant' %}#eligibility">Are you eligible for Outreachy?</a></li>
+	<li><a href="{% url 'docs-applicant' %}#initial-application">Application instructions</a></li>
+	<li><a href="{% url 'docs-applicant' %}#essay-questions">List of essay questions</a></li>
 	<li><a href="{% url 'docs-applicant' %}#essay-tips">Tips for writing strong essays</a></li>
 </ul>
 
