Initial application: simplify help text for nationality, citizenship, and location question

--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -90,8 +90,13 @@ Before you fill out your application, please read the following:
 				{{ field }}
 			</div>
 			<div class="card-footer bg-white">
+				<p>If you are living in Crimea, Cuba, Iran, North Korea, or Syria, say yes.</p>
+
+				<p>If you are a citizen or national of Cuba, Iran, North Korea, or Syria, say yes. Citizens and nationals of those countries should say yes, even if you are not currently living in that country.</p>
+
 				<p>Outreachy's fiscal parent, Software Freedom Conservancy, is a 501(c)(3) charitable non-profit in the United States of America. As a U.S. non-profit, Conservancy must ensure that funds are not sent to countries under U.S. sanctions programs, such as Cuba, Iran, North Korea, or Syria.</p>
-				<p>If you have citizenship with Cuba, Iran, North Korea, or Syria, please answer yes, even if you are not currently living in those countries. We will follow up with additional questions.</p>
+
+				<p>If you say yes, Outreachy will email you with additional questions.</p>
 			</div>
 		</div>
 	{% elif 'Are you a person or entity' in field.label_tag %}
