2021-12 internships: clarify graduating student eligibility

--- a/home/templates/home/blog/2021-08-13-initial-applications-open.html
+++ b/home/templates/home/blog/2021-08-13-initial-applications-open.html
@@ -12,7 +12,7 @@ Outreachy December 2021 internship applications
 <h1>Outreachy December 2021 internship applications</h1>
 
 <p><i>Date: August 13, 2021</i></p>
-{% comment %}<p><i>Last updated: DATE</i> - See the "SECTION" section below.</p>{% endcomment %}
+<p><i>Last updated: August 18, 2021</i> - Added eligibility rules for graduating students. See the <a href='#student-eligibility'>Student eligibility policy</a></br> section below.</p>
 
 <img src="{% static 'img/apply-now-flickr-cc-by-CC-BY-2_0-GotCredit.jpg' %}" alt="cc-by 2.0 GotCredit" class="img-fluid">
 <p><i>Photo CC BY 2.0 GotCredit</i></p>
@@ -161,6 +161,12 @@ As a temporary policy, we have lowered that requirement to 42 days free from sch
 <p>
 Students in the northern hemisphere should to apply to the May 2022 to August 2022 internships, not to the December internship cohort.
 </p>
+
+<p>Graduating students in the northern hemisphere <i>may</i> be eligible to apply to the December 2021 Outreachy internships. Graduating students are eligible if the exams for their <b>last</b> school term end before {{ current_round.initial_payment_date }}. If the school academic calendar continues past that date, graduating students are not eligible.</p>
+
+<p>When determining student eligibility, Outreachy looks at the school's academic calendar dates. We do not consider the individual student's course load. We do not consider special arrangements students have made with their university. Students who plan on taking a school term off to pursue an internship are not eligible for Outreachy. We cannot accept letters from universities about pausing classes or joining classes at a later date.</p>
+
+<p>When in doubt, graduating students should fill out an initial application. Make sure to accurately represent your school and employment time commitments.</p>
 
 <p>
 Outreachy organizers will review the revised term dates for northern hemisphere schools before the next internship round.
