Add Wellcome Trust to docs and blog post
Announce the CFP for Outreachy mentoring communities.
Explain how open science communities can apply for Wellcome Trust
funding. Explain how humanitarian communities can apply for Outreachy
general funding.

Update community guide, new community form, sponsorship form, and
new humanitarian open source community forms to reflect the possibility
of Wellcome Trust sponsorship.

This text is all a bit muddled about the difference between the
Outreachy general fund and Wellcome Trust funding. We tend to lump them
together, and they should be more separate. Meh, it's what I can do for
now; the call for mentoring communities really needs to get put out.

--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -49,7 +49,8 @@ Community participation rules
 	<p>Open source communities must find <a href="{% url 'docs-community' %}#intern-funding">internship funding</a> ($6,500 USD per intern):</p>
 	<ul>
 		<li>Humanitarian open source communities can apply for the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund.</a></li>
-		<li>Other communities must fund their own intern, or find a sponsor.</li>
+		<li>Open science communities can apply for funding from <a href="{% url 'docs-community' %}#wellcome-trust-funding" %}>Wellcome Trust</a></li>
+		<li>Other communities must find funding elsewhere, either from community funds or from a community sponsor.</li>
 	</ul>
 	<p>Once funding for one intern is secured, communities can <a href="{% url 'docs-community' %}#partial-general-funding" %}>request additional funding</a> from the Outreachy general fund.</p>
 </div>
