--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -45,6 +45,7 @@ Community Guide | Outreachy Documentation
 			<li><a href="#outreachy-general-fund">Outreachy general fund</a>
 				<ul>
 					<li><a href='#funding-during-cfp'>Outreachy general fund: All intern funding</a></li>
+					<li><a href='#wellcome-trust-funding'>Wellcome Trust funding: All intern funding</a></li>
 					<li><a href='#partial-general-funding'>Outreachy general fund: Additional intern funding</a></li>
 					<li><a href='#general-funding-stats'>How much does the Outreachy general fund sponsor?</a></li>
 					<li><a href='#general-funding-decision-making'>How do you decide who gets Outreachy general funding?</a></li>
@@ -280,35 +281,73 @@ Community Guide | Outreachy Documentation
 	<li>Funding some interns from the Outreachy general fund</li>
 </ol>
 
-<p><b>Humanitarian communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
+<p><b>Humanitarian open source communities</b> are eligible for interns to be fully funded by the Outreachy general fund.</p>
 
-<p><b>Non-humanitarian communities</b> must secure their own funding for at least one intern ($6,500 USD). After that external funding is secured, they can apply for additional interns to be funded by the Outreachy general fund.</p>
+<p><b>Open science communities</b> are eligible for interns to be fully funded by Wellcome Trust.</p>
+
+<p><b>Other communities</b> must secure their own funding for at least one intern ($6,500 USD). After that external funding is secured, they can apply for additional interns to be funded by the Outreachy general fund.</p>
 
 <h3 id='all-general-funding'><a href='#funding-during-cfp'>3.3.1 Outreachy general fund: All intern funding</a></h3>
 
-<p>Humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern. Outreachy is especially interested in funding humanitarian communities involving climate change, infectious diseases, and mental health.</p>
+<p>Humanitarian open source communities are invited to apply to the Outreachy general fund when first signing up to participate in Outreachy. If your community is approved, Outreachy will fully fund at least one intern.</p>
 
 <p>Non-humanitarian open source communities are not eligible for this option.</p>
 
-<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.2 Outreachy general fund: Additional intern funding</a></h3>
+<p>To be eligible for intern funding, a humanitarian open source community must be:</p>
 
-<p>Communities can apply to receive additional funding for interns from the Outreachy general fund. Both humanitarian and non-humanitarian can apply for additional funding from the Outreachy general fund. However, non-humanitarian open source communities must first have secured their own funding for at least one intern.</p>
+<ul>
+	<li><b>open source</b>: your project's source code and creative works must be published under an open source license</li>
 
-<p>During the intern selection process, communities can request additional interns be sponsored by the Outreachy general fund. Outreachy will review general funding requests across all communities, and determine which ones we have budget to sponsor.</p>
+	<li><b>humanitarian focused</b>: your project should tackle a humanitarian issue</li>
 
-<p>Communities can request that an intern be funded by the Outreachy general fund through the Outreachy website. When a mentor selects an intern, the coordinator can set the funding source to the Outreachy general fund.</p>
+	<li><b>community</b>: your project should have at least 2-3 people who make regular open source contributions to your project</li>
+</ul>
+
+<h3 id='wellcome-trust-funding'><a href='#wellcome-trust-funding'>3.3.2 Wellcome Trust funding: All intern funding</a></h3>
+
+<p>Outreachy is pleased to work with <a href="https://wellcome.org/">Wellcome Trust</a> to provide funding for open science interns. Wellcome Trust is focused on funding Outreachy interns working on open science projects that address urgent health challenges or discovery research.</p>
+
+<p>Open science communities are invited to apply for Wellcome Trust funding when first signing up to participate in Outreachy. If your community is approved, Wellcome Trust will fully fund at least one intern.</p>
+
+<p>In order to qualify for funding from Wellcome Trust, projects must be:</p>
+
+<ul>
+	<li><b>open source</b>: your project's source code and creative works must be published under an open source license</li>
+
+	<li><b>community</b>: your project should have at least 2-3 people who make regular open source contributions to your project</li>
+
+	<li><b>open science</b>: further <a href="https://wellcome.org/what-we-do/discovery-research">discovery of scientific research</a>, or create tools for scientists</li>
+
+	<li>tackle one of the following challenges: <a href="https://wellcome.org/what-we-do/infectious-disease">infectious diseases</a>, <a href="https://wellcome.org/what-we-do/climate-and-health">the health impacts of climate change</a>, or <a href="https://wellcome.org/what-we-do/mental-health">mental health</a></li>
+</ul>
+
+<h3 id='partial-general-funding'><a href='#partial-general-funding'>3.3.3 Outreachy general fund: Additional intern funding</a></h3>
+
+<p>As explained in the sections above, communities must find their own funding, or apply for funding from the Outreachy general fund or Wellcome Trust. Once funding for one intern is secured, communities will be approved to participate in Outreachy.</p>
+
+<p>During the intern selection process, some communities may find they have more strong applicants than they have funding for. In that case, communities can apply to the Outreachy general fund for additional intern funding.</p>
+
+<p>All types of open source communities (humanitarian, open science, and other types) are welcome to apply for additional intern funding.</p>
+
+<p>During the intern selection process, communities can request additional interns be sponsored by the Outreachy general fund. Communities can request that an intern be funded by the Outreachy general fund through the Outreachy website. When a mentor selects an intern, the community coordinator can set the funding source to the Outreachy general fund.</p>
+
+<p>After the intern selection deadline, Outreachy will review general funding requests across all communities. We will determine which ones we have budget to sponsor. Decisions will be communicated before the intern announcement date.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3.3 How much does the Outreachy general fund sponsor?</a></h3>
+<h3 id='general-funding-stats'><a href='#general-funding-stats'>3.3.4 How much does the Outreachy general fund sponsor?</a></h3>
 
-<p>The sponsorship for each Outreachy intern is $6,500 USD. The Outreachy general fund typically sponsors 5 to 10 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 3 interns per community.</p>
+<p>The sponsorship for each Outreachy intern is $6,500 USD.</p>
+
+<p>The Outreachy general fund typically sponsors 5 to 10 interns per cohort. The Outreachy general fund usually sponsors 1 intern per community, but it has occasionally sponsored up to 3 interns per community.</p>
+
+<p>Wellcome Trust typically sponsors 1 to 3 interns per cohort.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.3.4 How do you decide who gets Outreachy general funding?</a></h3>
+<h3 id='general-funding-decision-making'><a href='#general-funding-decision-making'>3.3.5 How do you decide who gets Outreachy general funding?</a></h3>
 
 <p>The Outreachy organizers review Outreachy general funding requests after the intern selection deadline. We review Outreachy general funding requests across all communities. Then we apply our criteria to determine which communities get funding.</p>
 
