--- a/home/templates/home/general_funding_application.html
+++ b/home/templates/home/general_funding_application.html
@@ -7,18 +7,11 @@ Outreachy general funding application
 {% block content %}
 
 <form action="" method="post">
-	<h1>Outreachy general fund application</h1>
+	<h1>Humanitarian open source community</h1>
 
-	<p>If your community is applying for Outreachy general funding, please fill out the application below.</p>
+	<p>If your humanitarian open source community is applying for Outreachy general funding, please fill out the fields below.</p>
 
-	<p>If your community is not applying for Outreachy general funding, please leave the form blank.</p>
-
-	<hr>
-
-	<h1>Outreachy general fund rules</h1>
-	{% include 'home/snippet/funding_short_description.html' %}
-
-	<h1>Outreachy general funding application</h1>
+	<p>Otherwise, please leave the form blank.</p>
 
 
 	{% csrf_token %}
