--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -1,7 +1,13 @@
-<p>Non-humanitarian open source communities need to provide their own funding for at least one intern ($6,500 USD).</p>
-
 {% comment %}Point coordinators to resources for finding and pitching to sponsors, once the community guide exists.{% endcomment %}
 
-<p>Humanitarian open source communities are invited to apply to the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund</a>. If your community is approved, Outreachy will fully fund at least one intern. Outreachy is especially interested in funding humanitarian projects involving climate change, infectious diseases, and mental health.</p>
+<p>All communities must find finding for at least one intern ($6,500 USD):</p>
 
-<p>Both humanitarian and non-humanitarian communities can apply to receive <a href='{% url 'docs-community' %}#outreachy-general-fund'>additional funding for interns</a>.</p>
+<ul>
+	<li><b>Humanitarian open source communities</b> can apply for funding from <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy</a></li>
+
+	<li><b>Open science communities</b> can apply for funding from <a href="{% url 'docs-community' %}#wellcome-trust-funding" %}>Wellcome Trust</a></li>
+
+	<li><b>Other open source communities</b> need to find their own funding. Communities might use their own community funds, or find a company to sponsor an intern.</li>
+</ul>
+
+<p>All types of open source communities can apply to receive <a href='{% url 'docs-community' %}#outreachy-general-fund'>additional funding for interns</a>. However, funding for at least one intern must be secured first.</p>
