--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -18,9 +18,11 @@ Intern Funding
 
 <p>Please <a href="">read the community guide</a> for more information about intern funding.</p>
 
+<p>Sponsorship for one intern is $6,500 USD. Please list the dollar amount in the form below, not the number of interns.</p>
+
 <p>If you are applying for the Outreachy general fund, please list the sponsor as "Outreachy general fund".</p>
 
-<p>Sponsorship for one intern is $6,500 USD. Please list the dollar amount in the form below, not the number of interns.</p>
+<p>If you are applying for Wellcome Trust funding, please list the sponsor as "Wellcome Trust".</p>
 
 {% include "home/snippet/privacy_policy.html" %}
 
