--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -24,6 +24,8 @@ Intern Funding
 
 <p>If you are applying for Wellcome Trust funding, please list the sponsor as "Wellcome Trust".</p>
 
+<p>If your community has unused funds from a past sponsorship, please list the sponsor as "Credit - SPONSOR NAME". If you are unsure if your community has a credit, please contact Outreachy organizers.</p>
+
 {% include "home/snippet/privacy_policy.html" %}
 
 {% if view.kwargs.action == 'submit' %}
