Remove all mention of travel stipend
The Outreachy PLC decided to permanently remove the Outreachy travel
stipend. Instead of paying interns a $5,500 internship stipend and a
$500 travel stipend, interns will be paid $6,000 total.

The decision was made for several reasons:

 - pay equity - interns in countries like India are more likely to need
   to travel far to attend an open source conference. This means their
   flight costs often exceed $500. People who are less economically
   well-off are less likely to be able to pay the remainder of the
   travel costs. If they don't use their travel stipend after two years,
   their travel stipend reverts to the Outreachy general fund. This
   meant interns who are less economically well off were essentially not
   getting $500 that people more economically well off were able to use

 - vaccine access inequalities - as the pandemic continues, economically
   well-off countries are more likely to have access to vaccines and
   resources to distribute vaccines. Some countries now have an almost
   fully vaccinated populace, while other countries have a very low
   number of people with even one dose of a vaccine. There is a push by
   some conferences to run in-person events in countries with high
   vaccination rates. If Outreachy were to re-instate the travel
   stipend, it would favor interns in more economically well-off
   countries.

 - travel funding is more common - when the Outreachy travel stipend was
   started, few open source conferences offered travel funding. Now
   travel funding is considered a sign of inclusivity, and many
   conference offer to cover conference fees and/or travel costs.

 - pay parity with GSoC - When Outreachy started, Google Summer of
   Code's internship stipend was $5,500. When GSoC moved to the pay
   parity model, their maximum internship stipend was $6,600. Increasing
   the internship stipend by the $500 travel stipend makes our total
   internship stipend more in line with GSoC.

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -11,7 +11,7 @@ Sponsor Outreachy
 <div class="block-paragraph"><div class="rich-text">Outreachy
  is a 501(c)(3) non-profit under our parent organization, Software 
 Freedom Conservancy, and donations are tax deductible.<br/><br/>Outreachy 
-internship stipends, travel fund, and program costs are supported by our
+internship stipends and program costs are supported by our
  generous donors. Whether you're an individual wanting to support 
 diversity in tech, or a corporation that uses Free and Open Source 
 Software, we invite you to support Outreachy!<br/><p><br/></p></div></div>
@@ -60,8 +60,8 @@ include the location in the subject line.
 you will be credited for half a year according to the amount you choose.<br/></p>Donations
  of any amount can be made to the Outreachy general fund. When a sponsor
  chooses to sponsor an Outreachy internship, they can sponsor any number
- of interns at $6,500 each. The internship sponsorship covers the $5,500
- intern stipend, $500 intern travel stipend, and $500 payment for 
+ of interns at $6,500 each. The internship sponsorship covers the $6,000
+ intern stipend and a $500 payment for
 bookkeeping, administrative, and legal support to Software Freedom 
 Conservancy.</div></div>
 <div class="block-heading"><h1 id="why-sponsor-diversity-in-foss">Why Sponsor Diversity in FOSS?</h1>
@@ -105,13 +105,9 @@ project ideas. FOSS communities generally provide their own mentors and
 project ideas. If a sponsor does have an internship idea and a mentor, 
 they should <a href="/mentor/">review the community guidelines</a>.<br/><br/>Q: If I sponsor a specific FOSS community and that community doesn't find an intern, what happens?<br/>A:
  Sometimes FOSS communities don't have enough applicants, or their best 
-applicant accepts another opportunity. Outreachy will try to encourage applicants towards communities that do not have enough applicants but we cannot guarantee that a community will find a suitable intern. We will use our best efforts to work with the sponsor and use the funds for that particular community or another that the sponsor prefers for two years, after which we'll use them for any Outreachy activity.<br/><br/>Q: How does the travel stipend work? Can interns use it to go to a company event?<br/>A:
- The $500 Outreachy travel stipend is for intern travel to technical 
-conferences with FOSS content or to events where interns 
-can network with their mentor and members of their FOSS community. 
-Company events may meet our travel stipend guidelines if they allow the intern to work with their mentor or other community contributors.<br/><br/>Q: What happens if an intern doesn't use their travel stipend?<br/>A: Travel stipends can be used for travel initiated 
-within a year after the beginning of the internship. Unused travel 
-allowances will be added to the Outreachy general funds.<br/><br/>Q: Did you used to be called something else?<br/>A: Outreachy was started in 2010 by the GNOME Project as the Outreach Program for Women (OPW). The name was changed in 2015 when the program was moved to Software Freedom Conservancy with a vision to include more people who experience the impact of bias and discrimination in tech. In 2006, the GNOME Project ran a one-time Women's Summer Outreach Program, which was the predecessor of OPW. <br/><br/>Q: Are you still associated with GNOME?<br/>A:
+applicant accepts another opportunity. Outreachy will try to encourage applicants towards communities that do not have enough applicants but we cannot guarantee that a community will find a suitable intern. We will use our best efforts to work with the sponsor and use the funds for that particular community or another that the sponsor prefers for two years, after which we'll use them for any Outreachy activity.<br/>
+
+<br/>Q: Did you used to be called something else?<br/>A: Outreachy was started in 2010 by the GNOME Project as the Outreach Program for Women (OPW). The name was changed in 2015 when the program was moved to Software Freedom Conservancy with a vision to include more people who experience the impact of bias and discrimination in tech. In 2006, the GNOME Project ran a one-time Women's Summer Outreach Program, which was the predecessor of OPW. <br/><br/>Q: Are you still associated with GNOME?<br/>A:
  GNOME has been an Outreachy mentoring community throughout the
 Outreachy's history. After Outreachy moved under our current non-profit home, Software Freedom Conservancy, GNOME continued to host 
 some Outreachy resources, including our website, wiki, application 
