--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -96,7 +96,7 @@ Community Guide | Outreachy Documentation
 
 <p>Outreachy is a paid, remote internship program. Outreachy's goal is to support people from groups underrepresented in tech. We help newcomers to free software and open source make their first contributions.</p>
 
-<p>Outreachy provides internships to work open source. People apply from all around the world. Interns work remotely, and are not required to move. Interns are paid a stipend of $5,500 USD for the three month internship. Interns have a $500 USD travel stipend to attend conferences or events.</p>
+<p>Outreachy provides internships to work open source. People apply from all around the world. Interns work remotely, and are not required to move. Interns are paid a stipend of $6,000 USD for the three month internship.</p>
 
 <p>Interns work with experienced mentors from open source communities. Outreachy internship projects may include programming, user experience, documentation, illustration, graphical design, or data science. Interns often find employment after their internship with Outreachy sponsors or in jobs that use the skills they learned during their internship.</p>
 
@@ -655,7 +655,7 @@ Some times project mentors <a href="#contribution-evaluation">evaluated the cont
 
 <h2 id='stipend-details'><a href='#stipend-details'>Internship stipend details</a></h2>
 
-<p>The $6,500 USD intern sponsorship covers the $5,500 internship stipend, the $500 intern conference travel stipend, and a $500 accounting fee. The accounting fee covers Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, handle sponsor invoicing, intern payments, W-9 collection, visa request letters, employment verification letters, student internship credit letters, and tax questions.</p>
+<p>The $6,500 USD intern sponsorship covers the $6,000 internship stipend and a $500 accounting fee. The accounting fee covers Outreachy's fiscal non-profit parent organization, Software Freedom Conservancy, handle sponsor invoicing, intern payments, W-9 collection, visa request letters, employment verification letters, student internship credit letters, and tax questions.</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
